# Marg

./: .gitignore  ans.txt  render.yaml  style.md
backend/: .env.example  pyproject.toml  requirements.txt  seed.py  update_passwords.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  exceptions.py  permissions.py  rate_limit.py  security.py  token_store.py
backend/app/db/: indexes.py  mongodb.py
backend/convention_compare_01/: convention_compare_report.json  convention_compare_report.txt
backend/convention_compare_02/: convention_compare_report.json  convention_compare_report.txt
backend/debug_run_04/: orientation_report.json  stitch_metadata.json
backend/debug_run_07/: ray_pipeline_trace.json  ray_pipeline_trace.txt  stitch_metadata.json  world_direction_fisheye.txt  world_frame_measurements.json
backend/debug_run_08/: stitch_metadata.json  world_frame_measurements.txt
backend/debug_run_09/: hemisphere_ownership.json  hemisphere_ownership.txt  orientation_report.json  orientation_report.txt  ray_pipeline_trace.json  ray_pipeline_trace.txt  stitch_metadata.json  world_direction_fisheye.json
backend/debug_run_yaw0/: orientation_report.txt  stitch_metadata.json
backend/debug_run_yaw0_test/: hemisphere_ownership.json  hemisphere_ownership.txt
backend/orientation_check/: orientation_report.json  orientation_report.txt
backend/tests/: conftest.py
backend/tools/: axis_convention_compare.py  convention_stitch_compare.py  orientation_verify.py  rotate_equirect_debug.py  stitch_debug.py  studio_orientation_compare.py
(+187 files in other folders)
