[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery==5.3.6",
    "cloudinary==1.39.1",
    "emails>=1.1.2",
    "exifread==3.0.0",
    "fastapi==0.110.0",
    "httpx==0.27.0",
    "loguru==0.7.2",
    "mongomock-motor>=0.0.36",
    "motor==3.3.2",
    "passlib[bcrypt]==1.7.4",
    "piexif==1.1.3",
    "pillow==10.2.0",
    "pydantic-settings>=2.2.1",
    "pydantic[email]==2.6.4",
    "pymongo==4.6.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "redis==5.0.3",
    "slowapi>=0.1.9",
    "uvicorn==0.28.0",
]
